--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+:root{
+  --yellow : #F5C32C;
+  --orange : #FCA61F;
+  --black : #242D49;
+  --gray : #788097;
+  --blueCard : #DDF8FE;
+  --purple : rgb(238 210 255);
+  --boxShadow : 0px 19px 60px rgba(0, 0, 0, 0.08);
+  --orangeCard : rgba(252, 167, 31, 0.45);
+  --smboxShadow : ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  padding: 0.5rem 3.5rem;
+  overflow: hidden;
+  color: var(--black);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button{
+  border-radius: 34px;
+  border: none;
   color: white;
+  font-size: 16px;
+  padding: 11px 26px 11px 26px;
+  background: linear-gradient(rgb(255, 186, 58),rgb(251, 164, 2));
+  box-shadow: 0 0 10px rgb(109, 82, 32);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  color: var(--orange);
+  font-size: 30px;
+  text-align: center;
 }
