--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
 
 .heading{
   color: var(--orange);
-  font-size: 30px;
+  font-size: 40px;
+  letter-spacing: 2px;
   text-align: center;
+  text-transform: uppercase;
+  /* margin: 0; */
+  /* background: linear-gradient(120deg, #f6d365 0%, #fda085 100%); */
 }
