--- a/src/components/skill_section/SkillsDiv/skillsDiv.css
+++ b/src/components/skill_section/SkillsDiv/skillsDiv.css
@@ -24,31 +24,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #000;
+    /* border: 2px solid #000; */
     padding: 10px;
-    width: 150px; /* Adjust the width to your preference */
+    width: 150px;
     height: 150px;
-    background-color: #fff; /* Background color for the card */
-    border-radius: 8px; /* Rounded corners for the card */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Box shadow for a subtle lift */
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(219, 113, 71, 0.5); /* Box shadow for a subtle lift */
     transition: transform 0.2s ease-in-out; /* Add a hover effect */
     cursor: pointer;
   }
   
   .skilldiv_main:hover {
-    transform: scale(1.05); /* Scale up the card on hover */
+    transform: scale(1.05);
   }
   
   .skilldiv_img {
-    height: 100px; /* Adjust the height to your preference */
-    width: 100px; /* Adjust the width to your preference */
+    height: 100px;
+    width: 100px;
     padding: 6px;
     text-align: center;
   }
   
   .skilldiv_img img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
   }
   
