--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   --boxShadow : 0px 19px 60px rgba(0, 0, 0, 0.08);
   --orangeCard : rgba(252, 167, 31, 0.45);
   --smboxShadow : ;
+  --background: rgba(246, 227, 179, 0.91);
 }
 
 .App{
