--- a/src/components/intro_section/intro/Intro.css
+++ b/src/components/intro_section/intro/Intro.css
@@ -1,15 +1,17 @@
 .intro_main {
-  height: 77vh;
+  /* height: 77vh; */
   display: flex;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 .i_left,.i_right {
   display: flex;
   flex: 1;
+
 }
 .i_left {
   flex-direction: column;
   gap: 2rem;
+  padding: 0 2%;
 }
 .i_name {
   display: flex;
@@ -31,16 +33,23 @@
   font-size: 14px;
   margin-top: 1rem;
 }
-.i_btn {
+.intro_btn_container{
+  display: flex;
+  gap: 4%;
+}
+/* .i_btn {
   width: 8rem;
   height: 3rem;
-}
+} */
 .i_btn:hover {
   background: white;
+  cursor: pointer;
   color: var(--orange);
+  font-weight: bold;
   border: 2px solid var(--orange);
 }
 .i_icons {
+  cursor: pointer;
   margin-top: 3rem;
   display: flex;
   /* gap: 0rem; */
@@ -49,27 +58,45 @@
   transform: scale(0.5);
   /* the above code make the images half of their current size*/
 }
-.i_icons * :hover {
-  cursor: pointer;
+.i_icons *:hover {
+  transform: scale(0.6) ;
 }
 
 .i_right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
+}
+
+/* image fix */
+.Personalimage_container{
+  /* height: 500px;
+  width: 500px; */
+
+  height: 90%;
+  min-width: 50%;
+  border-radius: 50%;
+  overflow: hidden;
+  /* object-fit: cover; */
 }
 .Bandita_img{
   height: 100%;
   width: 100%;
   object-fit: cover;
-  border-radius: 50%;
-  position: absolute;
-  transform: scale(0.8);
+ 
+  position: relative;
+
+
   box-shadow: 0 0 50px rgba(219, 113, 71, 0.5);
   /* top: -16%;  */
   /* shadow */
 }
+
+
 .f_div_right{
   position: absolute;
-  left: 70%;
+  left: 60%;
   top: 24px;
 }
 .f_div_left{
@@ -83,6 +110,9 @@
   transform: scale(0.8);
   left: -30px;
 }
+
+
+
 /* .blur{
   background: linear-gradient(#FFCEFE,#FFD495);
  width: 90%;
@@ -90,3 +120,10 @@
  left: 70%;
 
 } */
+
+@media screen and(max-width:768px) {
+  .intro_main{
+    display: flex;
+    flex-direction: column;
+  }
+}
