--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,41 +1,153 @@
-.n_wrapper{
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
+.n_wrapper {
+  height: 10vh;
+  display: flex;
+  /* justify-content: space-between; */
 }
-.n_left,.n_right{
-  /* for width 50-50 , flex:1*/
-  flex: 1; 
+.n_name {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+.n_left,
+.n_right {
+  /* flex: 1; */
   display: flex;
 }
-.n_left{
-    align-items: center;
-    gap: 2rem;
+.n_left {
+  flex: 1;
+  align-items: center;
+  gap: 2rem;
+  padding: 1%;
 }
-.n_name{
-    font-size: 1.3rem;
-    font-weight: bold;
+.n_right {
+  flex: 2;
+  /* align-items: center; */
+  /* justify-content: center; */
+  font-weight: 400;
+  justify-content: space-around;
+  /* gap: 2%; */
+  /* padding: 0 1%; */
 }
-.n_right{
-    align-items: center;
-    justify-content: center;
-    font-weight: 400;
+.n_lists {
+   padding: 0 1%;
+  display: flex;
+   align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  /* margin-right: 2rem; */
 }
-/* .n_lists{
-    the lists div will take more width
-    flex: 10;
+.n_right a {
+  color: #000;
+  text-decoration: none;
+}
+/* .n_right :hover,
+.n_right a :hover {
+  cursor: pointer;
+  color: var(--orange);
+  transform: scale(1.2);
 } */
-.n_lists ul{
+.n_btn:hover {
+  background: white;
+  color: var(--orange);
+  border: 2px solid var(--orange);
+}
+
+/* .navbar {
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+.navbar_left {
+  display: flex;
+  align-items: center;
+}
+
+.navbar_toggle {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.navbar_toggle-bar {
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+}
+
+.navbar_brand {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-left: 1rem;
+}
+
+.navbar_switch {
+  margin-left: auto;
+}
+
+.navbar_right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar_list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 2rem;
+}
+
+.navbar_list li {
+  font-size: 1rem;
+}
+
+.navbar_list a {
+  text-decoration: none;
+  color: #000;
+}
+
+.navbar_btn {
+  background-color: #fca61f;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar_toggle {
+    display: flex; 
+  }
+
+  .navbar_right {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    padding: 1rem;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .navbar_right.show {
     display: flex;
-    gap: 2rem;
-    margin-right: 4rem;
-}
-.n_lists ul :hover{
-    cursor: pointer;
-    color: var(--orange);
-}
-.n_btn:hover{
-    background: white;
-    color: var(--orange);
-    border: 2px solid var(--orange);
-}
+  }
+
+  .navbar_list {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .navbar_btn {
+    margin-top: 1rem;
+  }
+} */
