--- a/src/components/skill_section/SkillsDiv/skillsDiv.css
+++ b/src/components/skill_section/SkillsDiv/skillsDiv.css
@@ -1,25 +1,3 @@
-/* .skilldiv_main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid #000;
-  padding: 10px 20px;
-  width: 100px;
-  height: 100px;
-}
-.skilldiv_img {
-  height: 100px;
-  width: 100px;
-  padding-bottom: 6px;
-  box-shadow: 0 6px 4px -2px rgba(219, 188, 145, 0.436);
-}
-.skilldiv_img img {
-  height: 100%;
-  width: 100%;
-  object-fit: contain;
-} */
-
 .skilldiv_main {
     display: flex;
     flex-direction: column;
@@ -57,4 +35,16 @@
     font-weight: bold;
     margin: 8px 0;
   }
+
+  @media screen and (max-width: 530px) {
+   .skilldiv_main{
+    width: 100px;
+    height: 100px;
+   }
+   .skilldiv_img {
+    height: 50px;
+    width: 50px;
+    padding: 6px;
+  }
+}
   
