--- a/src/components/intro_section/FloatingDiv/FloatingDiv.css
+++ b/src/components/intro_section/FloatingDiv/FloatingDiv.css
@@ -1,18 +1,45 @@
 .floatingDiv{
-    justify-content: space-around;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
     background-color: rgb(222, 178, 232);
     box-shadow: var(--boxShadow);
     border-radius: 17px;
-    align-items: center;
-    padding-right: 28px;
-    height: 5rem;
+    /* padding-right: 28px; */
+    height: 4.5rem;
+    padding: 20px;
+
+
+    animation: floatingDiv 3s ease-in-out infinite;
+
 }
-.floatingDiv img{
-    transform: scale(0.5);
+@keyframes floatingDiv {
+    0%, 100% { transform: translate(0, 0); }
+    50% { transform: translate(0, 15px); }
 }
+
+.floatingDivImg{
+    height: 50px;
+    width: 50px;
+}
+.floatingDivImg img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+/* .floatingDiv img{
+    transform: scale(0.4);
+} */
 
 .floatingDiv span{
     font-family: sans-serif;
     font-size: 18px;
+}
+
+@media screen and (max-width:600px) {
+    .floatingDiv{
+        display: none;
+        /* height: 3.5rem; */
+    }
 }
