--- a/src/components/project_section/projectCard/projectCard.css
+++ b/src/components/project_section/projectCard/projectCard.css
@@ -6,7 +6,7 @@
     overflow: hidden;
     max-width: 300px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 10px;
+    /* margin: 10px; */
   }
   
   .card-image {
