--- a/src/components/project_section/Projects/project.css
+++ b/src/components/project_section/Projects/project.css
@@ -1,8 +1,12 @@
-.swiper_container{
-}
+
 .swiper-wrapper{
     padding-bottom: 36px;
 }
+.swiper-wrapper .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 .swiper-button-next,.swiper-button-prev{
     background-color: #7d7d7dac;
     padding:30px;
@@ -10,4 +14,11 @@
 }
 .swiper-button-next:hover,.swiper-button-prev:hover{
     transform: scale(1.2);
+}
+@media screen and (max-width:768px) {
+    .swiper-button-next,.swiper-button-prev{
+        background-color: transparent;
+        padding:0px;
+        border-radius: 0;
+    }
 }
