--- a/src/components/qualification_section/QualificationMain/qualificationMain.css
+++ b/src/components/qualification_section/QualificationMain/qualificationMain.css
@@ -3,8 +3,9 @@
 }
 .qualification_main{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+    gap: 20px;
     /* border-bottom: 2px solid #fdedce; */
     margin: 1rem 0;
     box-shadow: var(--boxShadow);
@@ -20,11 +21,23 @@
     letter-spacing: 2px;
     text-align: center;
     text-transform: uppercase;
+
+    cursor: pointer;
 }
 .notSelected{
-    color: #efd1a1;
-  font-size: 20px;
+    color: #f1cb8e;
+  font-size: 24px;
   letter-spacing: 2px;
   text-align: center;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+@media screen and (max-width:600px) {
+    .selecetd_bg{
+        font-size: 20px;
+    }
+    .notSelected{
+        font-size: 12px;
+    }
 }
